--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -12,3 +12,12 @@
 {% endcase %}
 
 {% endif %}
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160267528-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160267528-1');
+</script>
